# ai-learning-lab

./: .gitignore  README.md  pyproject.toml
00-guides/: README.md
00-guides/01-macos/: 01-macos-overview.md  02-important-macos-settings.md  03-xcode-cli-tools.md  04-homebrew-guide.md
00-guides/02-terminal/: 05-zsh-basics.md  06-wezterm-setup.md  07-starship-prompt.md  08-modern-terminal-utilities.md  09-zsh-professional-configuration.md  10-common-terminal-commands.md
00-guides/03-git-github/: 11-git-and-github-workflow.md
01-llm-engineering-course/week1/: day1.py
