[project]
name = "ai-learning-lab"
version = "0.1.0"
description = "AI learning lab environment with LLMs, RAG, local models, and ML tooling"
readme = "README.md"


# =========================================================
# Python version constraint
# Using latest (3.14) for experimentation
# =========================================================
requires-python = ">=3.14,<3.15"


# =========================================================
# Dependencies
# NOTE:
# This is a FULL-STACK environment (not minimal).
# Everything is installed together for experimentation.
# =========================================================
dependencies = [

    # -----------------------------------------------------
    # LLM Providers (API SDKs)
    # Used to interact with hosted language models
    # -----------------------------------------------------
    "openai>=2.34.0",          # OpenAI GPT models
    "anthropic>=0.98.1",       # Claude models
    "google-genai>=1.75.0",    # Google Gemini (modern SDK)
    "groq>=1.2.0",             # ultra-fast inference provider


    # -----------------------------------------------------
    # LLM Routing / Abstraction
    # Allows switching between providers easily
    # -----------------------------------------------------
    "litellm>=1.83.0",         # unified multi-provider interface


    # -----------------------------------------------------
    # LangChain Ecosystem
    # Framework for building LLM apps (chains, agents, tools)
    # -----------------------------------------------------
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langchain-experimental>=0.4.1",   # experimental / unstable features
    "langchain-chroma>=1.1.0",         # Chroma vector DB integration
    "langchain-huggingface>=1.2.2",    # HuggingFace integration
    "langchain-ollama>=1.1.0",         # Ollama integration


    # -----------------------------------------------------
    # RAG (Retrieval-Augmented Generation)
    # Embeddings + vector database
    # -----------------------------------------------------
    "chromadb>=1.5.9",         # vector database
    "sentence-transformers>=5.4.1",  # embedding models
    "tiktoken>=0.12.0",        # tokenization (OpenAI compatible)


    # -----------------------------------------------------
    # Local Models / Hugging Face / Ollama
    # Running models locally
    # -----------------------------------------------------
    "torch>=2.11.0",           # compute backend (CPU/GPU)
    "transformers>=5.7.0",     # HuggingFace model library
    "ollama>=0.6.2",           # local model runtime client


    # -----------------------------------------------------
    # Data Ingestion / Scraping
    # Collecting data from web / feeds / datasets
    # -----------------------------------------------------
    "beautifulsoup4>=4.14.3",  # HTML parsing
    "feedparser>=6.0.12",      # RSS/Atom feeds
    "datasets>=4.8.5",         # HuggingFace datasets


    # -----------------------------------------------------
    # Classical ML / Scientific Computing
    # Traditional ML models and math tools
    # -----------------------------------------------------
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "xgboost>=3.2.0",


    # -----------------------------------------------------
    # Visualization
    # Data plotting and interactive charts
    # -----------------------------------------------------
    "matplotlib>=3.10.9",
    "plotly>=6.7.0",


    # -----------------------------------------------------
    # Notebook / Interactive Development
    # Jupyter / VS Code notebooks support
    # -----------------------------------------------------
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",


    # -----------------------------------------------------
    # Infrastructure / Monitoring
    # Experiment tracking and system utilities
    # -----------------------------------------------------
    "modal>=1.4.2",            # serverless compute
    "wandb>=0.26.1",          # experiment tracking
    "psutil>=7.2.2",          # system monitoring


    # -----------------------------------------------------
    # Miscellaneous Utilities
    # Optional / niche tools
    # -----------------------------------------------------
    "pydub>=0.25.1",          # audio processing (requires ffmpeg)
    "speedtest-cli>=2.1.3",   # network diagnostics
]